@@ -41,10 +41,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>25</source>
-                    <target>25</target>
+                    <source>21</source>
+                    <target>21</target>
                     <enablePreview>true</enablePreview>
                     <useIncrementalCompilation>false</useIncrementalCompilation>
+<compilerArgs><arg>--add-modules</arg><arg>jdk.incubator.vector</arg></compilerArgs>
                 </configuration>
             </plugin>
 
